@@ -45,4 +45,8 @@ Tellico::Data::CollPtr Exporter::collection() const {
   return Data::CollPtr();
 }
 
+const Tellico::Data::FieldList& Exporter::fields() const {
+  return m_fields.isEmpty() ? collection()->fields() : m_fields;
+}
+
 #include "exporter.moc"
