@@ -49,7 +49,6 @@ GCstarExporter::~GCstarExporter() {
 }
 
 QString GCstarExporter::formatString() const {
-  // TODO i18n this?
   return QLatin1String("GCstar");
 }
 
@@ -106,6 +105,7 @@ QString GCstarExporter::text() {
   // now grab the XML
   TellicoXMLExporter exporter(coll);
   exporter.setEntries(entries());
+  exporter.setFields(fields());
   exporter.setIncludeImages(false); // do not include images in XML
 // yes, this should be in utf8, always
   exporter.setOptions(options() | Export::ExportUTF8);
