@@ -1,3 +1,7 @@
+2010-08-16  Robby Stephenson  <robby@periapsis.org>
+
+	* Improved exporter to add option for limiting exported fields (Bug 246390).
+
 2010-08-13  Robby Stephenson  <robby@periapsis.org>
 
 	* Added data source fetcher for dvdfr.com.
